2011-11-13  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* skk-vars.el (skk-annotation-python-program): Simply find
	"python" executable.
	* skk-annotation.el (skk-annotation-start-python): Call
	`set-buffer-process-coding-system'.
	(skk-annotation-lookup-DictionaryServices): Make command a little
	bit simple.  Insert the command if it has not been echoed.

2011-11-13  Tsuyoshi Kitamoto  <tsuyoshi.kitamoto@gmail.com>

	* skk-vars.el (skk-lookup-get-content-nth-dic) : New user option.
	(skk-lookup-get-content-default-dic) 
	(skk-lookup-get-content-default-dic-name): New internal variables.

	* skk-lookup.el (skk-lookup-pickup-headings): Fix docstring.
	(skk-lookup-get-content, skk-lookup-get-content-setup-dic): New Function.

2011-11-12  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* skk-vars.el (skk-annotation-lookup-DictionaryServices)
	(skk-annotation-loop-interval): New user options.
	(skk-annotation-python-program, skk-annotation-process-buffer):
	New variables.
	(skk-annotation-dict-program): Default to
	skk-annotation-python-program under Darwin.
	(skk-annotation-other-sources): Add `DictionaryServices'.  Move
	`ja.wikitionary' next to `ja.wikipedia'.
	* skk-annotation.el (skk-annotation-start-python)
	(skk-annotation-DictionaryServices-cache)
	(skk-annotation-lookup-DictionaryServices): New functions.
	(skk-annotation-find-and-show, skk-annotation-wikipedia)
	(skk-annotation-wikipedia-1, skk-annotation-wikipedia-cache):
	Modify to accept `DictionaryServices'.
	(skk-annotation-lookup-region-or-at-point): Alias to
	`skk-annotation-wikipedia-region-or-at-point'.
	(skk-annotation-wait-for-input): Modify according to it.
	* skk.el (skk-mode-invoke, skk-preload): Call
	`skk-annotation-start-python' if
	skk-annotation-lookup-DictionaryServices is non-nil.

2011-11-11  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* skk-annotation.el (skk-annotation-lookup-dict): Accept an
	optional arg truncate for candidate listing.  Add autoload cookie.